--- a/css/style.css
+++ b/css/style.css
@@ -125,8 +125,19 @@ footer {
 	padding-top: 20px;
 }
 
+footer ul {
+	display: block;
+	text-align: center;
+}
+
+footer ul li {
+	display: inline-block;
+	padding: 20px 0px 20px 35px;
+}
+
+
+
 footer h4 {
-	padding-top: 10px;
 	color: #aaa;
 	font-weight: 100;
 }
